two non null references to the same 1-N child